# ase-rs

./: Cargo.toml  release.toml
ase2/: Cargo.toml
ase2/examples/: goomba.ase  read.rs
ase2/src/: chunk.rs  color.rs  header.rs  helpers.rs  lib.rs
ase2/src/chunk/: cel_chunk.rs  cel_extra_chunk.rs  color_profile_chunk.rs  frame_tags_chunk.rs  layer_chunk.rs  mask_chunk.rs  palette_chunk.rs  slice_chunk.rs  user_data_chunk.rs
ase2/tests/: tests.rs
src/: asesprite.rs  chunk.rs  color.rs  frame.rs  lib.rs
src/chunk/: cel_chunk.rs  color_profile_chunk.rs  frame_tags_chunk.rs  layer_chunk.rs  mask_chunk.rs  palette_chunk.rs
tests/: tests.rs
