[package]
name = "ase2"
version = "0.1.3"
edition.workspace = true
description = "Rust library to parse Aseprite *.aseprite files"
keywords = ["ase", "Aseprite", "Pixel"]
license = "MIT"
repository = "https://github.com/sermuns/ase-rs"

[dependencies]
byteorder = "1"
bitflags = "2"
num_enum = "0.7"
flate2 = "1.0"

[dev-dependencies]
rstest = "0.26"
